--- a/python-wasm/the-guy-she-told-you-not-to-worry-about/index.html
+++ b/python-wasm/the-guy-she-told-you-not-to-worry-about/index.html
@@ -5,9 +5,12 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-
-		<!-- load da wasm -->
+   <!-- load da wasm -->
 	<body onload="getWASM()">
+
+      <h1>~=|WASM MATH|=~</h1>
+      <!-- images -->
+      <img id="gigachad" src="data/GIGACHAD.png">
 
       <!-- interface -->
       <form id="factorial">
