--- a/python-wasm/the-guy-she-told-you-not-to-worry-about/index.html
+++ b/python-wasm/the-guy-she-told-you-not-to-worry-about/index.html
@@ -10,7 +10,15 @@
 
       <h1>~=|WASM MATH|=~</h1>
       <!-- images -->
+      <img id="jesus" src="data/math-jesus.png">
+      <img id="chad" src="data/chad.png">
+
+      <div id="shting"></div>
+
       <img id="gigachad" src="data/GIGACHAD.png">
+
+      <!-- other stuff -->
+      <span id="chad-description">average wasm enjoyer --></span>
 
       <!-- interface -->
       <form id="factorial">
@@ -26,19 +34,19 @@
       </form>
 
       <form id="circumference">
-         <input id="circumference-number" class="numba" type="number">
+         <input id="circumference-number" class="numba" type="number" step="0.0001">
          <input id="circumference-submit" type="submit" value="circumberferance">
          <br> <label id="circumference-result">result:</label>
       </form>
 
       <form id="circleSurface">
-         <input id="circleSurface-number" class="numba" type="number">
+         <input id="circleSurface-number" class="numba" type="number" step="0.0001">
          <input id="circleSurface-submit" type="submit" value="surface of a circle">
          <br> <label id="circleSurface-result">result:</label>
       </form>
 
       <form id="sphereVolume">
-         <input id="sphereVolume-number" class="numba" type="number">
+         <input id="sphereVolume-number" class="numba" type="number" step="0.0001">
          <input id="sphereVolume-submit" type="submit" value="volume of a sphere">
          <br> <label id="sphereVolume-result">result:</label>
       </form>
