--- a/python-wasm/the-guy-she-told-you-not-to-worry-about/index.html
+++ b/python-wasm/the-guy-she-told-you-not-to-worry-about/index.html
@@ -11,14 +11,31 @@
       <h1>~=|WASM MATH|=~</h1>
       <!-- images -->
       <img id="jesus" src="data/math-jesus.png">
+      <img id="cross1" src="data/cross.gif">
+      <img id="cross2" src="data/cross.gif">
+      <img id="cross3" src="data/cross.gif">
+      <img id="js-now" src="data/jesus-now.gif">
+      <img id="landchad" src="data/landchad.gif">
+      <img id="linux" src="data/linux.gif">
+      <img id="IE" src="data/iexplore.gif">
+      <img id="doom" src="data/doom2stuff.gif">
+      <img id="haiku" src="data/haiku.gif">
+      <img id="homocide" src="data/homicide.gif">
+      <img id="mongolia" src="data/mongolia.gif">
+      <img id="vim" src="data/vim.gif">
+      <img id="glitter" src="data/fokin-wasm.gif">
+      <img id="geometry" src="data/geometry.gif">
+      <img id="fire" src="data/fire.webp">
       <img id="chad" src="data/chad.png">
-
       <div id="shting"></div>
-
-      <img id="gigachad" src="data/GIGACHAD.png">
-
-      <!-- other stuff -->
       <span id="chad-description">average wasm enjoyer --></span>
+      <span id="superior">SUPERIOR GUI</span>
+      <img id="gigachad" src="data/GIGACHAD.png">
+      <img id="hot-dog" src="data/hot-dog.gif">
+
+
+      <!-- this -->
+      <!-- https://cyber.dabamos.de/88x31/ -->
 
       <!-- interface -->
       <form id="factorial">
