--- a/python-wasm/the-guy-she-told-you-not-to-worry-about/index.html
+++ b/python-wasm/the-guy-she-told-you-not-to-worry-about/index.html
@@ -14,28 +14,34 @@
       <img id="cross1" src="data/cross.gif">
       <img id="cross2" src="data/cross.gif">
       <img id="cross3" src="data/cross.gif">
-      <img id="js-now" src="data/jesus-now.gif">
-      <img id="landchad" src="data/landchad.gif">
-      <img id="linux" src="data/linux.gif">
-      <img id="IE" src="data/iexplore.gif">
-      <img id="doom" src="data/doom2stuff.gif">
-      <img id="haiku" src="data/haiku.gif">
-      <img id="homocide" src="data/homicide.gif">
-      <img id="mongolia" src="data/mongolia.gif">
-      <img id="vim" src="data/vim.gif">
       <img id="glitter" src="data/fokin-wasm.gif">
       <img id="geometry" src="data/geometry.gif">
       <img id="fire" src="data/fire.webp">
       <img id="chad" src="data/chad.png">
       <div id="shting"></div>
-      <span id="chad-description">average wasm enjoyer --></span>
       <span id="superior">SUPERIOR GUI</span>
+      <span id="chad-description">average wasm enjoyer --></span>
       <img id="gigachad" src="data/GIGACHAD.png">
+      <a href="https://ubuntuce.com/" target="_blank"><img id="js-now" src="data/jesus-now.gif"></a>
+      <a href="https://landchad.net/" target="_blank"><img id="landchad" src="data/landchad.gif"></a>
+      <a href="https://www.vim.org/" target="_blank"><img id="vim" src="data/vim.gif"></a>
+      <a href="https://www.bodhilinux.com/" target="_blank"><img id="linux" src="data/linux.gif"></a>
+      <a href="https://internet-explorer-for-mac.en.softonic.com/mac" target="_blank"><img id="IE" src="data/iexplore.gif"></a>
+      <!-- https://doom2stuff.neocities.org/ seems dead, but this will do -->
+      <a href="https://doom2.net/" target="_blank"><img id="doom" src="data/doom2stuff.gif"></a>
+      <a href="https://haiku-os.org/" target="_blank"><img id="haiku" src="data/haiku.gif"></a>
+      <a href="https://www.cameronsworld.net/" target="_blank"><img id="homocide" src="data/homicide.gif"></a>
+      <a href="https://mongolia.gov.mn/" target="_blank"><img id="mongolia" src="data/mongolia.gif"></a>
       <img id="hot-dog" src="data/hot-dog.gif">
-
 
       <!-- this -->
       <!-- https://cyber.dabamos.de/88x31/ -->
+
+      <!-- music -->
+      <audio id="playar" autoplay loop controls>
+         <!-- https://www.fesliyanstudios.com/royalty-free-music/download/boss-time/2340 -->
+         <source src="data/boss-time.ogg" type="audio/ogg">
+      </audio>
 
       <!-- interface -->
       <form id="factorial">
